wipe dead code, rename functions, improve catches summary tests