@@ -19,31 +19,19 @@ import sootup.core.jimple.common.stmt.JAssignStmt;
  * Per-path iteration symbolization for self-updating variables (loop counters, accumulators).
  * Without this, both the loop-entry and loop-exit boolean checks of an unrolled body refer to the
  * same SymExpr for the loop counter and resolve to its initial def, producing contradictory
- * constraints on a path that traverses the loop.
- *
- * <p>For each variable {@code v} that has a self-update def {@code v = f(v, ...)} on the path, this
- * analysis:
- *
- * <ul>
- *   <li>Mints {@code v#0, v#1, …, v#K} fresh SymVars where K is the number of self-update defs on
- *       the path (with {@code maxEdgeTraversals = 1}, K ≤ 1 per loop).
- *   <li>Emits a precondition {@code v#0 = init} for the initial def's RHS.
- *   <li>Emits {@code v#{k+1} = f(v#k, …)} for each self-update step (the original RHS with {@code
- *       v} substituted by {@code v#k}).
- *   <li>Returns a rewriter that replaces {@code v} with {@code v#k} in any constraint, where {@code
- *       k} is the number of self-update defs strictly preceding the constraint's forward-edge index
- *       on the path.
- * </ul>
+ * constraints on a path that traverses the loop. Not sure how this fits into more general loop
+ * unrolling techniques and how much loop handling we need
  */
 final class IterationContext {
 
   static final IterationContext EMPTY = new IterationContext(Map.of(), List.of());
 
-  private final Map<String, IterVarInfo> infoByVar;
+  private final Map<String, IterVarPositions> infoByVar;
   private final List<SymbolicConstraint> linkPreconditions;
 
   private IterationContext(
-      final Map<String, IterVarInfo> infoByVar, final List<SymbolicConstraint> linkPreconditions) {
+      final Map<String, IterVarPositions> infoByVar,
+      final List<SymbolicConstraint> linkPreconditions) {
     this.infoByVar = infoByVar;
     this.linkPreconditions = linkPreconditions;
   }
@@ -53,16 +41,16 @@ final class IterationContext {
   }
 
   /**
-   * Returns {@code expr} with each self-updating variable's references replaced by the iteration
-   * symbol appropriate for a constraint anchored at {@code forwardEdgeIndex} on this path. No-op
-   * when no self-update vars apply, so callers don't need to gate.
+   * Returns expr with each self-updating variable's references replaced by the iteration symbol
+   * appropriate for a constraint anchored at forwardEdgeIndex on this path. No-op when no
+   * self-update vars apply, so callers don't need to gate.
    */
   SymExpr rewriteAt(final SymExpr expr, final int forwardEdgeIndex) {
     if (infoByVar.isEmpty()) {
       return expr;
     }
     SymExpr result = expr;
-    for (Map.Entry<String, IterVarInfo> entry : infoByVar.entrySet()) {
+    for (Map.Entry<String, IterVarPositions> entry : infoByVar.entrySet()) {
       int iter = entry.getValue().iterAt(forwardEdgeIndex);
       SymVar replacement = entry.getValue().iterVars.get(iter);
       result = result.substitute(entry.getKey(), replacement);
@@ -76,8 +64,8 @@ final class IterationContext {
     // Single forward pass classifies each assign on the path. We keep the *first*
     // initial def and *first* self-update RHS per variable; if a variable were both
     // self-updating and re-initialized on the same path the analyzer would already
-    // be in territory where this approximation is best-effort, and downstream tests
-    // will surface it.
+    // be in territory where this approximation is best-effort. hoping that examples
+    // in the projects we are analysing will guide us in defining the approach
     Map<String, List<Integer>> selfUpdatePositions = new HashMap<>();
     Map<String, SymExpr> initialValues = new HashMap<>();
     Map<String, SymExpr> selfUpdateRhs = new HashMap<>();
@@ -109,7 +97,7 @@ final class IterationContext {
       return EMPTY;
     }
 
-    Map<String, IterVarInfo> infoByVar = new HashMap<>(selfUpdatePositions.size());
+    Map<String, IterVarPositions> iterVarsEnv = new HashMap<>(selfUpdatePositions.size());
     List<SymbolicConstraint> linkPreconditions = new ArrayList<>();
 
     for (Map.Entry<String, List<Integer>> entry : selfUpdatePositions.entrySet()) {
@@ -130,7 +118,7 @@ final class IterationContext {
       SymExpr initial = initialValues.get(var);
       if (initial != null) {
         linkPreconditions.add(
-            new SymbolicConstraint(new SymBinOp(BinOp.EQ, iterVars.get(0), initial), true));
+            new SymbolicConstraint(new SymBinOp(BinOp.EQ, iterVars.getFirst(), initial), true));
       }
 
       // i#{k+1} = step(i#k). step is the self-update RHS with `var` rebound to i#k.
@@ -142,24 +130,24 @@ final class IterationContext {
                 new SymBinOp(BinOp.EQ, iterVars.get(idx + 1), rewrittenStep), true));
       }
 
-      infoByVar.put(var, new IterVarInfo(iterVars, positions));
+      iterVarsEnv.put(var, new IterVarPositions(iterVars, positions));
     }
 
-    return new IterationContext(infoByVar, linkPreconditions);
+    return new IterationContext(iterVarsEnv, linkPreconditions);
   }
 
-  private static final class IterVarInfo {
+  private static final class IterVarPositions {
     private final List<SymVar> iterVars;
     private final int[] selfUpdatePositions;
 
-    IterVarInfo(final List<SymVar> iterVars, final List<Integer> positions) {
+    IterVarPositions(final List<SymVar> iterVars, final List<Integer> positions) {
       this.iterVars = iterVars;
       this.selfUpdatePositions = positions.stream().mapToInt(Integer::intValue).toArray();
     }
 
     int iterAt(final int forwardEdgeIndex) {
       // Self-update at node-position p has applied by the time we reach an edge whose
-      // source is at index ≥ p+1. Equivalently for our forward-edge anchor, p strictly
+      // source is at index >= p+1. Equivalently for our forward-edge anchor, p strictly
       // less than forwardEdgeIndex means the def's effect is visible.
       int count = 0;
       for (int pos : selfUpdatePositions) {
